--- a/templates/player.html
+++ b/templates/player.html
@@ -144,7 +144,8 @@
             const video = document.getElementById('video');
             if (Hls.isSupported()) {
                 const hls = new Hls();
-                hls.loadSource("/stream?url={{ embed_url }}");
+                //hls.loadSource("/stream?url={{ embed_url }}");
+                hls.loadSource("/proxy?url={{ embed_url }}");
                 hls.attachMedia(video);
             } else if (video.canPlayType('application/vnd.apple.mpegurl')) {
                 video.src = "{{ embed_url }}";
