--- a/templates/redirect.html
+++ b/templates/redirect.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8">
-    <title>Redirect...</title>
-</head>
-<body>
+  <head>
+    <title>Redirecting...</title>
     <script>
-        window.location.href = "{{ video_url }}";
+      window.location.href = "{{ url }}";
     </script>
-</body>
+  </head>
+  <body>
+    <p>Redirecting to video...</p>
+  </body>
 </html>
